<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitlle"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="36dp"
        tools:text="@string/tvTitlle" />

    <CheckBox
        android:id="@+id/cb_Tv"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:text="@string/cb_Tv"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="74dp"
        tools:text="@string/cb_Tv" />

    <CheckBox
        android:id="@+id/cb_Radio"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:text="@string/cb_Rario"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="127dp"
        tools:text="@string/cb_Rario" />

    <CheckBox
        android:id="@+id/cb_Periodico"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:text="@string/cb_Periodico"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="177dp"
        tools:text="@string/cb_Periodico" />

    <CheckBox
        android:id="@+id/cb_Amigo"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:text="@string/cb_Amigo"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="230dp"
        tools:text="@string/cb_Amigo" />

    <CheckBox
        android:id="@+id/cb_Otro"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:text="@string/cb_Otro"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="279dp"
        tools:text="@string/cb_Otro" />

    <EditText
        android:id="@+id/et_Others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_Others"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="361dp"
        tools:text="@string/et_Others" />

    <TextView
        android:id="@+id/tvAnoderElse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAnoderElse"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="334dp"
        tools:text="@string/tvAnoderElse" />

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showInfo"
        android:text="@string/btn_Loads"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="443dp"
        tools:text="@string/btn_Loads" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Result"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="510dp"
        tools:text="@string/tv_Result" />
</androidx.constraintlayout.widget.ConstraintLayout>